Register SignalR in API

--- a/src/BOMA.RTR.Api/appsettings.Development.json
+++ b/src/BOMA.RTR.Api/appsettings.Development.json
@@ -7,5 +7,9 @@
   },
   "Roger": {
     "FileLocation": "C:\\BOMA_ROGER_FILES"
+  },
+  "SignalR": {
+    "HubEndpoint": "/notificationsHub",
+    "NotificationMethodName": "NotificationReceived"
   }
 }
