--- a/src/BOMA.RTR.Api/BOMA.RTR.Api.csproj
+++ b/src/BOMA.RTR.Api/BOMA.RTR.Api.csproj
@@ -10,6 +10,7 @@
     <ItemGroup>
         <PackageReference Include="CsvHelper" Version="30.0.1" />
         <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.1" />
+        <PackageReference Include="Microsoft.AspNetCore.SignalR.Common" Version="8.0.1" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     </ItemGroup>
 
