Configure FileWatcher to notify client about Roger file change

--- a/src/BOMA.RTR.Api/appsettings.Development.json
+++ b/src/BOMA.RTR.Api/appsettings.Development.json
@@ -6,7 +6,8 @@
     }
   },
   "Roger": {
-    "FileLocation": "C:\\BOMA_ROGER_FILES"
+    "FileLocation": "C:\\BOMA_ROGER_FILES",
+    "FileName": "RogerRealTimeRecords.csv"
   },
   "SignalR": {
     "HubEndpoint": "/notificationsHub",
