--- a/src/BOMA.RTR.Client/angular.json
+++ b/src/BOMA.RTR.Client/angular.json
@@ -22,16 +22,16 @@
             "browser": "src/main.ts",
             "polyfills": ["zone.js"],
             "tsConfig": "tsconfig.app.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/web.config"],
             "styles": ["src/styles.css"],
             "scripts": []
           },
           "configurations": {
-            "production": {
+            "production-hall": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.ts"
+                  "with": "src/environments/environment.prod.hall.ts"
                 }
               ],
               "budgets": [
@@ -79,7 +79,7 @@
           "options": {
             "polyfills": ["zone.js", "zone.js/testing"],
             "tsConfig": "tsconfig.spec.json",
-            "assets": ["src/favicon.ico", "src/assets"],
+            "assets": ["src/favicon.ico", "src/assets", "src/web.config"],
             "styles": ["src/styles.css"],
             "scripts": []
           }
