--- a/src/BOMA.RTR.Client/package.json
+++ b/src/BOMA.RTR.Client/package.json
@@ -6,6 +6,7 @@
     "start": "ng serve",
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
+    "deploy-prod-hall-iis": "ng build --watch --base-href / --configuration production-hall",
     "test": "ng test",
     "lint": "ng lint"
   },
