Adjust displaying proper records for production hall and warehouse related departments + adjust production deployment script

--- a/src/BOMA.RTR.Client/angular.json
+++ b/src/BOMA.RTR.Client/angular.json
@@ -30,11 +30,11 @@
             "scripts": []
           },
           "configurations": {
-            "production-hall": {
+            "production": {
               "fileReplacements": [
                 {
                   "replace": "src/environments/environment.ts",
-                  "with": "src/environments/environment.prod.hall.ts"
+                  "with": "src/environments/environment.prod.ts"
                 }
               ],
               "budgets": [
